# ros2neuro_recorder

./: CMakeLists.txt  package.xml
include/ros2neuro_recorder/: DummyWriter.hpp  FactoryWriter.hpp  Recorder.hpp  Writer.hpp  XDFWriter.hpp
src/: DummyWriter.cpp  FactoryWriter.cpp  Recorder.cpp  Writer.cpp  XDFWriter.cpp  recorder.cpp  test_writerfactory.cpp
